--- a/html/gallery/nizi/Kiyoi.html
+++ b/html/gallery/nizi/Kiyoi.html
@@ -56,6 +56,14 @@
             <img class="gallery-art" src="../../../img/gallery/Kiyoi/清（PC-98版）.png" alt="清（PC-98版）">
             <p class="caption">清（PC-98版）</p>
           </div>
+          <div class="art-gallery" title="清（PC-98・プライド版）">
+            <img class="gallery-art" src="../../../img/gallery/Kiyoi/Kiyoi (PC-98 Pride).png" alt="清（PC-98・プライド版）">
+            <p class="caption">清（PC-98・プライド版）</p>
+          </div>
+          <div class="art-gallery" title="プライド・２０２４年">
+            <img class="gallery-art" src="../../../img/gallery/Kiyoi/Pride 2024.png" alt="プライド・２０２４年">
+            <p class="caption">プライド・２０２４年</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
