--- a/html/gallery/nizi/Satoki_Nijikawa.html
+++ b/html/gallery/nizi/Satoki_Nijikawa.html
@@ -72,9 +72,11 @@
             <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Satoki Sprite.png" alt="郷鬼のスプライト">
             <p class="caption">郷鬼のスプライト</p>
           </div>
-          <div class="art-gallery" id="郷鬼のスプライト・ブラジャーとオムツ">
-            <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ">
-            <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
+          <div id="nsfw">
+            <div class="art-gallery" id="郷鬼のスプライト・ブラジャーとオムツ">
+              <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ">
+              <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
+            </div>
           </div>
         </div>
         <div class="flex-gallery" id="Flexbox 【美術品】・Ｂ">
@@ -94,9 +96,11 @@
             <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Pride 2024.png" alt="プライド・２０２４年">
             <p class="caption">プライド・２０２４年</p>
           </div>
-          <div class="art-gallery" id="A Smol Oni ｷﾓﾁｲｲ">
-            <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/A Smol Oni ｷﾓﾁｲｲ.png" alt="A Smol Oni ｷﾓﾁｲｲ">
-            <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
+          <div id="nsfw">
+            <div class="art-gallery" id="A Smol Oni ｷﾓﾁｲｲ">
+              <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/A Smol Oni ｷﾓﾁｲｲ.png" alt="A Smol Oni ｷﾓﾁｲｲ">
+              <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
+            </div>
           </div>
         </div>
         <div class="flex-gallery" id="Flexbox 【美術品】・Ｃ">
