--- a/html/gallery/nizi/Satoki_Nijikawa.html
+++ b/html/gallery/nizi/Satoki_Nijikawa.html
@@ -56,7 +56,7 @@
         <h2 class="art-heading">美術品</h2><hr>
         <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
         <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
-        <div class="flex-gallery" id="Flexbox 【美術品】・Ａ">
+        <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="虹川郷鬼（PC-98版）">
             <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）">
             <p class="caption">虹川郷鬼（PC-98版）</p>
@@ -79,8 +79,6 @@
               <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
             </div>
           </div>
-        </div>
-        <div class="flex-gallery" id="Flexbox 【美術品】・Ｂ">
           <div class="art-gallery" id="トランスゲンダーの旗を持つ郷鬼">
             <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼">
             <p class="caption">トランスゲンダーの旗を持つ郷鬼</p>
@@ -103,8 +101,6 @@
               <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
             </div>
           </div>
-        </div>
-        <div class="flex-gallery" id="Flexbox 【美術品】・Ｃ">
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
