--- a/html/nizi.html
+++ b/html/nizi.html
@@ -608,7 +608,14 @@
                 誕生日：<br>
                 年齢：
               </p>
-              <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="background-color: #FBD569; color: #404040;">金色</span>である。</p>
+              <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="background-color: #FBD569; color: #241F31;">金色</span>である。</p>
+              <p>
+                見た色：<br>
+                <span style="background-color: #FBD569; color: #241F31;">通常（金色）</span><br>
+                <span style="background-color: #F995B9; color: #241F31;">気持ちいい（ピンク）</span><br>
+                <span style="background-color: #E9934E; color: #241F31;">怒り（オレンジ色）</span><br>
+                <span style="background-color: #77C8D1; color: #241F31;">悲しみ（明るい青）</span>
+              </p>
               <br>
               <a href="./gallery/nizi/Hap_P._Emo-shun.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
               <br>
