--- a/html/ancient.html
+++ b/html/ancient.html
@@ -27,6 +27,7 @@
     <title>造化神録　旧神關里</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/ancient.css">
     <!-- Scripts -->
     <script src="../js/ancient.js"></script>
   </head>
